@@ -4,5 +4,5 @@ public interface HasNamedParts
 {
   public Object get (String key);
 
-  //public boolean isConstant (String key);
+  public boolean isConstant (String key);
 }
